--- a/apps/templates/home/monitors.html
+++ b/apps/templates/home/monitors.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Dashboard {% endblock %} 
+{% block title %} System Monitors {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -81,6 +81,7 @@
 
     <!-- custom-chart js -->
     <script src="/static/assets/js/monitors.js"></script>
+
 
 
 {% endblock javascripts %}
