--- a/apps/templates/admin/users.html
+++ b/apps/templates/admin/users.html
@@ -42,6 +42,7 @@
                                                 <th><span>Role</span></th>
                                                 <th><span>Subscription Plan</span></th>
                                                 <th><span>Tasks Quota</span></th>
+                                                <th><span>Disk Usage</span></th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -73,6 +74,28 @@
     API_USERS = {{ url_for("api_blueprint.users_user_list") | tojson }};
     API_USERS_UPDATE = {{ url_for("api_blueprint.users_user_2") | tojson }};
     API_PLANS = {{ url_for("api_blueprint.plans_plans") | tojson }};
+
+    function humanFileSize(bytes, si=false, dp=1) {
+        const thresh = si ? 1000 : 1024;
+
+        if (Math.abs(bytes) < thresh) {
+            return bytes + ' B';
+        }
+
+        const units = si
+        ? ['kB', 'MB', 'GB', 'TB', 'PB', 'EB', 'ZB', 'YB']
+        : ['KiB', 'MiB', 'GiB', 'TiB', 'PiB', 'EiB', 'ZiB', 'YiB'];
+        let u = -1;
+        const r = 10**dp;
+
+        do {
+            bytes /= thresh;
+            ++u;
+        } while (Math.round(Math.abs(bytes) * r) / r >= thresh && u < units.length - 1);
+
+        return bytes.toFixed(dp) + ' ' + units[u];
+    }
+
 
     get_html_quota_bar = function(data){
         let quota_count = Number(data.quota_count);
@@ -128,6 +151,7 @@
                         '<td>' + get_html_role(LIST_USERS[i].role) + '</td>' +
                         '<td class="UserPlan" data-user-id="'+LIST_USERS[i].id+'">' + get_html_plan_btn(LIST_USERS[i]) + '</td>' +
                         '<td>' + get_html_quota_bar(LIST_USERS[i].tasks) + '</td>' +
+                        '<td>' + humanFileSize(LIST_USERS[i].disk_usage) + '</td>' +
                     '</tr>';
             }
         $('#users_table tbody').html(html);
