--- a/apps/templates/admin/users.html
+++ b/apps/templates/admin/users.html
@@ -133,7 +133,7 @@
         } else {
             color = ["light", "dark"];
         }
-        {#html = "<div class='p-1 m-1 bg-"+color[0]+" text-"+color[1]+"'>"+data.label+"</div>";#}
+        //html = "<div class='p-1 m-1 bg-"+color[0]+" text-"+color[1]+"'>"+data.label+"</div>";
         html = "<div class='p-0 m-0'>"+data.label+"</div>";
         return html
     }
