--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -10,11 +10,11 @@
 {#					</li>#}
 					<li class="nav-item">
 						<a href="{{ url_for('home_blueprint.index') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span
-								class="pcoded-mtext">Dashboard</span></a>
+								class="pcoded-mtext">Home</span></a>
 					</li>
 					<li class="nav-item">
 						<a href="{{ url_for('tasks_blueprint.default_route') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-cpu"></i></span><span
-								class="pcoded-mtext">Your Simulations</span></a>
+								class="pcoded-mtext">Your Tasks</span></a>
 					</li>
 					<li class="nav-item">
 						<a href="{{ url_for('home_blueprint.subscription_plans') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-shopping-cart"></i></span><span
@@ -34,8 +34,9 @@
                     {% if current_user.is_authenticated and current_user.role.level >= 100 %}
 					<li class="nav-item pcoded-hasmenu">
 						<a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-sliders"></i></span><span
-								class="pcoded-mtext">Admin pannels</span></a>
+								class="pcoded-mtext">Admin</span></a>
 						<ul class="pcoded-submenu">
+							<li><a href="{{ url_for('admin_blueprint.admin_dashboard') }}"><i class="feather icon-activity"></i> Dashboard</a></li>
 							<li><a href="{{ url_for('admin_blueprint.admin_users') }}"><i class="feather icon-user"></i> Users</a></li>
 							<li><a href="{{ url_for('admin_blueprint.admin_tasks') }}"><i class="feather icon-cpu"></i> Simulations</a></li>
 						</ul>
