--- a/apps/templates/admin/dashboard.html
+++ b/apps/templates/admin/dashboard.html
@@ -95,7 +95,7 @@
 				<div class="col-md-12">
 					<div class="card table-card">
 						<div class="card-header">
-							<h5>List of simulations</h5>
+							<h5>List of tasks</h5>
 						</div>
 						<div class="card-body">
                             <div class="table-responsive">
@@ -106,7 +106,7 @@
                                                 <th><span>Tasks ID</span></th>
                                                 <th><span>User</span></th>
                                                 <th><span>Status</span></th>
-                                                <th><span>Number of floats</span></th>
+                                                <th><span>Dummy parameter</span></th>
                                                 <th><span>Label</span></th>
                                                 <th><span>Actions</span></th>
                                             </tr>
@@ -138,7 +138,7 @@
     <script src="/static/assets/js/pages/users.js"></script>
     <script src="/static/assets/js/pages/plans.js"></script>
     <script src="/static/assets/js/monitors.js"></script>
-    <script src="/static/assets/js/pages/simulations-launcher.js"></script>
+    <script src="/static/assets/js/pages/launcher.js"></script>
 
     <script>
         var APIKEY = {{ current_user.apikey | tojson }};
