New Work Pool manager

--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -38,7 +38,7 @@
 						<ul class="pcoded-submenu">
 							<li><a href="{{ url_for('admin_blueprint.admin_dashboard') }}"><i class="feather icon-activity"></i> Dashboard</a></li>
 							<li><a href="{{ url_for('admin_blueprint.admin_users') }}"><i class="feather icon-user"></i> Users</a></li>
-							<li><a href="{{ url_for('admin_blueprint.admin_tasks') }}"><i class="feather icon-cpu"></i> Simulations</a></li>
+							<li><a href="{{ url_for('admin_blueprint.admin_tasks') }}"><i class="feather icon-cpu"></i> Tasks</a></li>
 						</ul>
 					</li>
                     {% endif %}
